--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Salam, c'est le cours de mécanique</h1>
     <ul>
-        <li><a href="lectures">Lectures</a></li>
+        <li><a href="lectures.html">Lectures</a></li>
         <li><a href="exams">Exams</a></li>
         <li><a href="exams">Assignements</a></li>
     </ul>
